--- a/src/modulo-03-web/jogo da forca/css/jogo.css
+++ b/src/modulo-03-web/jogo da forca/css/jogo.css
@@ -3,14 +3,21 @@
   width: 50px;
   margin: 5px;
   display: inline-block;
+  box-shadow: 0px 0px 6px #2222bb;
 }
 
 .body {
 }
 
+.palpite {
+  margin-top: 15px;
+}
+
 .palavra {
   font-size: 80px;
   text-align: center;
+  margin-bottom: 15px;
+  margin-top: 17%;
 }
 
 .row {
@@ -29,6 +36,21 @@
 }
 
 .form-container {
-  text-align: center;
-  overflow: hidden;
+  position: fixed;
+  top: 45%;
+  left: 37%;
+}
+
+.pontos {
+  position: fixed;
+  top: 9%;
+  left: 2%;
+  float: left;
+}
+
+.opcoes {
+  position: fixed;
+  top: 5%;
+  left: 2%;
+  float: left;
 }
