--- a/src/modulo-03-web/jogo da forca/css/jogo.css
+++ b/src/modulo-03-web/jogo da forca/css/jogo.css
@@ -6,7 +6,10 @@
   box-shadow: 0px 0px 6px #2222bb;
 }
 
-.body {
+.dica {
+  position: fixed;
+  left: 2%;
+  float: left;
 }
 
 .palpite {
@@ -28,17 +31,19 @@
   transform: scale(0);
 }
 
-.teclado {
-}
-
 .animation {
   transition: transform 0.5s;
 }
 
-.form-container {
+.form-container, .game-over {
   position: fixed;
   top: 45%;
   left: 37%;
+}
+
+.game-over {
+  text-align: center;
+  font-size: 80px;
 }
 
 .pontos {
