refactor(jogo.css): alterar local e modo de exibição do rank

--- a/src/modulo-03-web/jogo da forca/css/jogo.css
+++ b/src/modulo-03-web/jogo da forca/css/jogo.css
@@ -41,6 +41,13 @@
   left: 37%;
 }
 
+.rank {
+  position: fixed;
+  top: 15%;
+  left: 1%;
+  float: left;
+}
+
 .game-over {
   text-align: center;
   font-size: 80px;
