refactor(fontes): alterar fonte dos pontos e da dica

--- a/src/modulo-03-web/jogo da forca/css/jogo.css
+++ b/src/modulo-03-web/jogo da forca/css/jogo.css
@@ -102,10 +102,14 @@
   top: 9%;
   left: 2%;
   float: left;
+  font-family: monospace;
+  font-weight: bold;
 }
 
 .hint {
   display: inline-block;
+  font-family: monospace;
+  font-weight: bold;
 }
 
 .opcoes {
