--- a/src/modulo-03-web/jogo da forca/css/jogo.css
+++ b/src/modulo-03-web/jogo da forca/css/jogo.css
@@ -8,6 +8,7 @@
   margin: 5px;
   display: inline-block;
   box-shadow: 0px 0px 6px #2222bb;
+  animation: glow 4s infinite;
 }
 
 .dica {
@@ -117,4 +118,16 @@
   top: 5%;
   left: 2%;
   float: left;
+}
+
+@keyframes glow {
+  0% {
+    box-shadow: 0px 0px 6px #2222bb;
+  }
+  65%{
+    box-shadow: 0px 0px 25px #2222bb;
+  }
+  100% {
+    box-shadow: 0px 0px 6px #2222bb;
+  }
 }
