--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora/Views/Home/Index.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora/Views/Home/Index.cshtml
@@ -11,9 +11,11 @@
 </head>
 <body>
     <div>
-        <h1 class="titulo">@ViewBag.Title</h1>
-        <h2>Serviço bom é serviço de qualidade!!!</h2>
-        <img src="http://socalskateshop.com/images/logos/tsg.jpg" />
+        <img class="banner" src="http://socalskateshop.com/images/logos/tsg.jpg" />
+        <h1 class="titulo">
+            @ViewBag.Title
+        </h1>
+        <h2 class="descricao">Serviço bom é serviço de qualidade!!!</h2>
     </div>
     <form action="../RELATORIO/JOGOS">
         <input type="submit" value="Lista de jogos">
