style(Jogo.cshtml): estilizar

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora/Views/Relatorio/Jogos.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora/Views/Relatorio/Jogos.cshtml
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
 </head>
-<body>
-    <div>
-        <text style="white-space: pre;font-family:monospace;">@Model.Relatorio</text>
+<body class="jogos-container">
+    <div class="relatorio-container">
+        <text class="relatorio">@Model.Relatorio</text>
     </div>
 </body>
 </html>
