--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora/Content/Site.css
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora/Content/Site.css
@@ -5,15 +5,8 @@
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .titulo {
@@ -24,16 +17,8 @@ div {
     text-align: center;
 }
 
-.relatorio-container {
+.relatorio-sombra {
     box-shadow: 0px 0px 9px rgba(20,20,20, 0.5);
-    width: 700px;
-}
-
-.jogos-container {
-    margin: auto;
-    margin-top: 55px;
-    width: 55%;
-    padding: 10px;
 }
 
 .relatorio {
