--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora/Views/Relatorio/Jogos.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora/Views/Relatorio/Jogos.cshtml
@@ -11,30 +11,51 @@
     <title>@ViewBag.Title</title>
 </head>
 <body class="jogos-container">
-    <div class="relatorio-container">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Nome</th>
-                    <th>Preço</th>
-                    <th class="text-center">Categoria</th>
-                    <th class="text-center">Disponível</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (Locadora.Dominio.Jogo jogo in @Model.ListaDeJogos)
-                {
-                    <tr>
-                        <td class="text-right">@jogo.Id</td>
-                        <td class="text-left">@jogo.Nome</td>
-                        <td class="text-left">@("R$ " + jogo.Preco.ToString("0.00"))</td>
-                        <td class="text-center">@jogo.Categoria</td>
-                        <td class="text-center">@(jogo.Disponivel ? "SIM" : "NÃO")</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+    <div class="container-fluid">
+        <div class="row">
+            <div role="main" class="col-md-8 col-md-push-2 relatorio-sombra">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nome</th>
+                            <th>Preço</th>
+                            <th class="text-center">Categoria</th>
+                            <th class="text-center">Disponível</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (Locadora.Dominio.Jogo jogo in @Model.ListaDeJogos)
+                        {
+                            <tr>
+                                <td class="text-right">@jogo.Id</td>
+                                <td class="text-left">@jogo.Nome</td>
+                                <td class="text-left">@("R$ " + jogo.Preco.ToString("0.00"))</td>
+                                <td class="text-center">@jogo.Categoria</td>
+                                <td class="text-center">@(jogo.Disponivel ? "SIM" : "NÃO")</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+            <aside role="complementary" class="col-md-3 col-md-push-2">
+                <h2>Em destaque</h2>
+                <div class="list-group">
+                    <a href="#" class="list-group-item active">
+                        <h4 class="list-group-item-heading">@Model.JogoMaisCaro</h4>
+                        <p class="list-group-item-text">Jogo mais caro</p>
+                    </a>
+                    <a href="#" class="list-group-item">
+                        <h4 class="list-group-item-heading">@Model.JogoMaisBarato</h4>
+                        <p class="list-group-item-text">Jogo mais barato</p>
+                    </a>
+                    <a href="#" class="list-group-item">
+                        <h4 class="list-group-item-heading">@Model.PrecoMedio</h4>
+                        <p class="list-group-item-text">Média de preço</p>
+                    </a>
+                </div>
+            </aside>
+        </div>
     </div>
 </body>
 </html>
