refactor(Locadora): implementar exercício MVC

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Home/Index.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewBag.Title = "Página Inicial";
 }
 
-<h2>Locadora CWI Crescer</h2>
+<img src="@Url.Content("~/Content/Images/tsg.jpg")" />
+<h1 class="titulo">TSG Games</h1>
+<h3>Serviço bom é serviço de qualidade!!!</h3>
 
 <a href="/Relatorio/JogosDisponiveis">Jogos Disponíveis</a>
 
