--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
@@ -1,24 +1,54 @@
-﻿@model List<JogoModel>
+﻿@model RelatorioModel
 @{
     ViewBag.Title = "Jogos Disponíveis";
 }
 
-<h2>Jogos disponíveis para locação</h2>
+<h2>TSG Games</h2>
 
-<table class="table table-striped table-bordered table-hover">
-    <thead>
-        <tr>
-            <th style="width: 40%">Jogo</th>            
-            <th style="width: 30%">Categoria</th>
-            <th style="width: 30%">Preço</th>
-        </tr>
-    </thead>
-    @foreach (var jogo in @Model)
-    {
-        <tr>
-            <td>@jogo.Nome</td>            
-            <td>@jogo.Categoria</td>
-            <td>@jogo.Preco.ToString("c")</td>
-        </tr>
-    }
-</table>
+
+<div class="container-fluid">
+    <div class="row">
+        <div role="main" class="col-md-8 col-md-push-2">
+            <table class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Categoria</th>
+                        <th>Preço</th>
+                    </tr>
+                </thead>
+                @foreach (var jogo in @Model.Jogos)
+                {
+                    <tr>
+                        <td>@jogo.Nome</td>
+                        <td>@jogo.Categoria</td>
+                        <td>@jogo.Preco.ToString("c")</td>
+                    </tr>
+                }
+            </table>
+        </div>
+        <aside role="complementary" class="col-md-3 col-md-push-2">
+            <div class="list-group">
+                <a href="#" class="list-group-item active">
+                    <h4 class="list-group-item-heading">@Model.JogoMaisCaro</h4>
+                    <p class="list-group-item-text">Jogo mais caro</p>
+                </a>
+                <a href="#" class="list-group-item">
+                    <h4 class="list-group-item-heading">@Model.JogoMaisBarato</h4>
+                    <p class="list-group-item-text">Jogo mais barato</p>
+                </a>
+                <a href="#" class="list-group-item">
+                    <h4 class="list-group-item-heading">@Model.PrecoMedio.ToString("c")</h4>
+                    <p class="list-group-item-text">Média de preço</p>
+                </a>
+                <a href="#" class="list-group-item">
+                    <h4 class="list-group-item-heading">@Model.QuantidadeTotalDeJogos</h4>
+                    <p class="list-group-item-text">Total de jogos</p>
+                </a>
+            </div>
+        </aside>
+    </div>
+</div>
+
+
+
