--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
@@ -3,10 +3,10 @@
     ViewBag.Title = "Jogos Disponíveis";
 }
 
-<h2>TSG Games</h2>
-
-
 <div class="container-fluid">
+    <div class="row">
+        <h2 class="col-md-8 col-md-push-2">TSG Games</h2>
+    </div>
     <div class="row">
         <div role="main" class="col-md-8 col-md-push-2">
             <table class="table table-bordered table-hover">
