--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Jogos Disponíveis";
 }
 
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <h2 class="col-md-8 col-md-push-2">TSG Games</h2>
     </div>
