--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Content/Site.css
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Content/Site.css
@@ -21,3 +21,40 @@ textarea {
     font-family: monospace;
 }
 
+.shiny-button {
+    width: 155px;
+    height: 30px;
+    background-color: #222;
+    text-align: center;
+    color: #e1e1e1;
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10px;
+    box-shadow: 0px 0px 6px rgba(0,0,0,0.4);
+}
+
+.shiny-button:hover {
+}
+
+.shiny-button:after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 0%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.4);
+    -webkit-transition: none;
+    -moz-transition: none;
+    -o-transition: none;
+    transition: none;
+}
+
+.shiny-button:hover:after {
+    width: 100%;
+    background-color: rgba(255,255,255,0);
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
