style(Index.cshtml): substituir por Url.Action

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Home/Index.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="col-md-10 col-md-push-1">
             <h1 class="titulo">TSG Games</h1>
             <h3>Serviço bom é serviço de qualidade!!!</h3>
-            <button class="shiny-button" onclick="location.href='/Relatorio/JogosDisponiveis'">Jogos Disponíveis</button>
+            <button class="shiny-button" onclick="location.href='@Url.Action("JogosDisponiveis", "Relatorio")'">Jogos Disponíveis</button>
         </div>
     </div>
 </div>
