--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
@@ -33,7 +33,9 @@
                 <h4 class="list-group-item-heading">@Model.Descricao</h4>
                 <p class="list-group-item-text">Detalhes</p>
             </a>
+            <a href="#" class="list-group-item text-center">
+                <img src=@Model.Imagem width="400"/>
+            </a>
         </div>
     </div>
-</div>
 </div>
