style(_Layout.cshtml): colocar form de busca ao lado do link de jogos disponíveis

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Content/Site.css
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Content/Site.css
@@ -58,3 +58,11 @@ textarea {
     -o-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
+
+.nav-form {
+    margin: 15px;
+}
+
+.nav-link {
+    margin: 5px;
+}
