--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
@@ -49,13 +49,13 @@
 
     <div class="tab-pane fade" id="imagem">
         <a href="#" class="list-group-item text-center">
-            <img src=@Model.Imagem width="400" />
+            <img src=@Model.Imagem width="520" height="415" />
         </a>
     </div>
 
     <div class="tab-pane fade" id="video">
         <a href="#" class="list-group-item text-center">
-            <iframe width="420" height="315" src=@Model.Video frameborder="0" allowfullscreen></iframe>
+            <iframe width="520" height="415" src=@Model.Video frameborder="0" allowfullscreen></iframe>
         </a>
     </div>
 </div>
