refactor(Selo): substituir texto por imagem

--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Jogo/Detalhes.cshtml
@@ -30,7 +30,7 @@
                             <p class="list-group-item-text">Categoria</p>
                         </a>
                         <a href="#" class="list-group-item">
-                            <h4 class="list-group-item-heading">@Model.Selo</h4>
+                            <h4 class="list-group-item-heading">@Html.Partial("_ImagemSelo", @Model.Selo)</h4>
                             <p class="list-group-item-text">Selo</p>
                         </a>
                         <a href="#" class="list-group-item">
