--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
@@ -5,12 +5,15 @@
 
 <div class="container">
     <div class="row">
-        <h2 class="col-md-8 col-md-push-2">TSG Games</h2>
+        <div class="col-md-4 col-md-push-2"><h2>TSG Games</h2></div>
+        <div class="col-md-2" style="margin-top:23px;">
+            <button class="shiny-button" onclick="location.href='@Url.Action("Manter","Jogo")'">Criar jogo</button>
+        </div>
     </div>
-    <div class="row">
-        <div class="col-md-8 col-md-push-2">
-            @if (Model.Jogos.Count > 0)
+    @if (Model.Jogos.Count > 0)
             {
+        <div class="row">
+            <div class="col-md-8 col-md-push-2">
                 <table class="table table-bordered table-hover">
                     <thead>
                         <tr>
@@ -34,31 +37,35 @@
                         }
                     </tbody>
                 </table>
-            }
-            else
-            {
-                <h2>Nenhum jogo encontrado.</h2>
-            }
-        </div>
-        <aside class="col-md-3 col-md-push-2">
-            <div class="list-group">
-                <a href="#" class="list-group-item active">
-                    <h4 class="list-group-item-heading">@Model.JogoMaisCaro</h4>
-                    <p class="list-group-item-text">Jogo mais caro</p>
-                </a>
-                <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">@Model.JogoMaisBarato</h4>
-                    <p class="list-group-item-text">Jogo mais barato</p>
-                </a>
-                <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">@Model.PrecoMedio.ToString("c")</h4>
-                    <p class="list-group-item-text">Média de preço</p>
-                </a>
-                <a href="#" class="list-group-item">
-                    <h4 class="list-group-item-heading">@Model.QuantidadeTotalDeJogos</h4>
-                    <p class="list-group-item-text">Total de jogos</p>
-                </a>
             </div>
-        </aside>
-    </div>
+            <aside class="col-md-3 col-md-push-2">
+                <div class="list-group">
+                    <a href="#" class="list-group-item active">
+                        <h4 class="list-group-item-heading">@Model.JogoMaisCaro</h4>
+                        <p class="list-group-item-text">Jogo mais caro</p>
+                    </a>
+                    <a href="#" class="list-group-item">
+                        <h4 class="list-group-item-heading">@Model.JogoMaisBarato</h4>
+                        <p class="list-group-item-text">Jogo mais barato</p>
+                    </a>
+                    <a href="#" class="list-group-item">
+                        <h4 class="list-group-item-heading">@Model.PrecoMedio.ToString("c")</h4>
+                        <p class="list-group-item-text">Média de preço</p>
+                    </a>
+                    <a href="#" class="list-group-item">
+                        <h4 class="list-group-item-heading">@Model.QuantidadeTotalDeJogos</h4>
+                        <p class="list-group-item-text">Total de jogos</p>
+                    </a>
+                </div>
+            </aside>
+        </div>
+    }
+    else
+    {
+        <div class="row">
+            <div class="col-md-8 col-md-push-2">
+                <h2>Nenhum jogo encontrado.</h2>
+            </div>
+        </div>
+    }
 </div>
