--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Content/Site.css
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Content/Site.css
@@ -1,12 +1,36 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image: url("Images/fundoazul.jpg");
+    background-repeat: repeat;
+    color: #f1f1f1;
+}
+
+h2 {
+    color: #ccc;
+    font-size: 20px;
+}
+
+h3 {
+    color: #ccc;
+    font-size: 15px;
+}
+
+.descricao {
+    white-space: pre-line;
+}
+
+.bold {
+    font-weight: bold;
+    color: #f1f1f1;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
+    padding-top: 25px;
     padding-left: 15px;
     padding-right: 15px;
+    background-color: rgba(0,0,0,0.7);
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
