--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Jogo/Manter.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Jogo/Manter.cshtml
@@ -10,76 +10,76 @@
 else
 {
     <h2>Editar jogo</h2>
-    using (Html.BeginForm("Salvar", "Jogo", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-    {
-        @Html.ValidationSummary(false)
 
-        @Html.HiddenFor(m => m.Id)
+}
 
-        <div class="col-md-6">
-            <div class="form-group">
-                @Html.LabelFor(m => m.Nome, new { @class = "col-sm-2 control-label" })
-                <div>
-                    @Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Nome)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Categoria, new { @class = "col-sm-2 control-label" })
-                <div>
-                    @Html.DropDownListFor(m => m.Categoria, (IEnumerable<SelectListItem>)@ViewBag.ListaCategoria, "", new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Categoria)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Selo, new { @class = "col-sm-2 control-label" })
-                <div>
-                    @Html.DropDownListFor(m => m.Selo, (IEnumerable<SelectListItem>)@ViewBag.ListaSelo, "", new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Selo)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Preco, new { @class = "col-sm-2 control-label" })
-                <div>
-                    @Html.TextBoxFor(m => m.Preco, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Preco)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Imagem, new { @class = "col-sm-2 control-label" })
-                <div>
-                    @Html.TextBoxFor(m => m.Imagem, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Imagem)
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Video, new { @class = "col-sm-2 control-label" })
-                <div>
-                    @Html.TextBoxFor(m => m.Video, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Video)
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                @Html.LabelFor(m => m.Descricao, new { @class = "col-sm-2 control-label" })
-                <div>
-                    @Html.TextAreaFor(m => m.Descricao, new { @class = "form-control", @rows = 15 })
-                    @Html.ValidationMessageFor(m => m.Descricao)
-                </div>
-            </div>
-        </div>
+@using (Html.BeginForm("Salvar", "Jogo", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    @Html.ValidationSummary(false)
+    
+    <div class="col-md-6">
         <div class="form-group">
-            <div class="col-sm-offset-1 col-md-4">
-                <button type="submit" class="btn btn-primary">Salvar</button>
+            @Html.LabelFor(m => m.Nome, new { @class = "col-sm-2 control-label" })
+            <div>
+                @Html.TextBoxFor(m => m.Nome, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Nome)
             </div>
         </div>
-    }
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.Categoria, new { @class = "col-sm-2 control-label" })
+            <div>
+                @Html.DropDownListFor(m => m.Categoria, (IEnumerable<SelectListItem>)@ViewBag.ListaCategoria, "", new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Categoria)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.Selo, new { @class = "col-sm-2 control-label" })
+            <div>
+                @Html.DropDownListFor(m => m.Selo, (IEnumerable<SelectListItem>)@ViewBag.ListaSelo, "", new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Selo)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.Preco, new { @class = "col-sm-2 control-label" })
+            <div>
+                @Html.TextBoxFor(m => m.Preco, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Preco)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.Imagem, new { @class = "col-sm-2 control-label" })
+            <div>
+                @Html.TextBoxFor(m => m.Imagem, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Imagem)
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(m => m.Video, new { @class = "col-sm-2 control-label" })
+            <div>
+                @Html.TextBoxFor(m => m.Video, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Video)
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="form-group">
+            @Html.LabelFor(m => m.Descricao, new { @class = "col-sm-2 control-label" })
+            <div>
+                @Html.TextAreaFor(m => m.Descricao, new { @class = "form-control", @rows = 15 })
+                @Html.ValidationMessageFor(m => m.Descricao)
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-1 col-md-4">
+            <button type="submit" class="btn btn-primary">Salvar</button>
+        </div>
+    </div>
 }
 
 
