--- a/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_ImagemCategoria.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/Locadora/Locadora.Web.MVC/Views/Shared/_ImagemCategoria.cshtml
@@ -22,5 +22,5 @@
     {
         nomeImagem = "categoriaEsporte.png";
     }
-    <span class="pull-left"><img width="40" height="40" src="~/Content/Images/@nomeImagem" />@Model</span>
+    <span><img width="40" height="40" src="~/Content/Images/@nomeImagem" title=@Model />&nbsp @Model</span>
 }
